# rust-rules-engine

./: Cargo.toml  README.md
src/: lib.rs
src/conditions/: functions.rs  mod.rs  operators.rs
src/evaluation/: evaluate_function.rs  mod.rs
src/facts/: json_facts.rs  mod.rs
src/serialization/: deserialize.rs  serialize.rs
src/wasm/: mod.rs
tests/: array_condition.rs  fn_max.rs  fn_min.rs  group_condition.rs  single_condition.rs
