[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.85"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3"
features = [ "console" ]

[lib]
crate-type = ["cdylib", "lib"]
